[gd_scene load_steps=12 format=3 uid="uid://demml7f8xyw1n"]

[ext_resource type="Script" uid="uid://bg6gjg1kn2jxy" path="res://Scripts/FrameworkScripts/Menu.gd" id="1_egacv"]
[ext_resource type="Theme" uid="uid://by6yqsmwuyf3i" path="res://Objects/UIThemes/Menu.tres" id="2_0kaei"]
[ext_resource type="FontFile" uid="uid://kq5pe5ver0ga" path="res://Assets/Fonts/KodeMono-VariableFont_wght.ttf" id="3_6rlta"]
[ext_resource type="FontFile" uid="uid://d8ujl3e7yh8r" path="res://Assets/Fonts/VT323-Regular.ttf" id="3_21k4g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dbquh"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20
shadow_color = Color(0, 0, 0, 0)
shadow_size = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rgeg1"]
bg_color = Color(0.254902, 0.254902, 0.254902, 0.521569)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14
shadow_color = Color(0.254902, 0.254902, 0.254902, 0.6)
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lnv47"]
bg_color = Color(0.439216, 0.478431, 0.439216, 1)
corner_radius_top_left = 13
corner_radius_top_right = 13
corner_radius_bottom_right = 13
corner_radius_bottom_left = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a804u"]
bg_color = Color(0.568627, 0.568627, 0.568627, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 43

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p3bx2"]
bg_color = Color(0.262745, 0.262745, 0.262745, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eb7rl"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color(0, 0, 0, 0.654902)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xu515"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_size = 4

[node name="SelectSlotMenu" type="Node2D"]
script = ExtResource("1_egacv")

[node name="Panel2" type="Panel" parent="."]
modulate = Color(0.317647, 0.317647, 0.317647, 0.188235)
offset_left = -495.0
offset_top = -225.0
offset_right = 495.0
offset_bottom = 155.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dbquh")
metadata/_edit_use_anchors_ = true

[node name="Panel3" type="Panel" parent="."]
modulate = Color(0.317647, 0.317647, 0.317647, 0.521569)
offset_left = 294.0
offset_top = -142.0
offset_right = 470.315
offset_bottom = 34.545
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dbquh")
metadata/_edit_use_anchors_ = true

[node name="SlotProgressPercentage" type="ProgressBar" parent="."]
z_index = 1
offset_left = -447.0
offset_top = -15.0
offset_right = 268.0
offset_bottom = 150.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("2_0kaei")
theme_override_font_sizes/font_size = 156
theme_override_styles/background = SubResource("StyleBoxFlat_rgeg1")
theme_override_styles/fill = SubResource("StyleBoxFlat_lnv47")

[node name="SlotProgressPercentage2" type="ProgressBar" parent="."]
z_index = 1
offset_left = -258.0
offset_top = -15.0
offset_right = 457.0
offset_bottom = 150.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("2_0kaei")
theme_override_font_sizes/font_size = 156
theme_override_styles/background = SubResource("StyleBoxFlat_rgeg1")
theme_override_styles/fill = SubResource("StyleBoxFlat_lnv47")

[node name="SlotProgressPercentage3" type="ProgressBar" parent="."]
z_index = 1
offset_left = -68.0001
offset_top = -15.0
offset_right = 647.0
offset_bottom = 150.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("2_0kaei")
theme_override_font_sizes/font_size = 156
theme_override_styles/background = SubResource("StyleBoxFlat_rgeg1")
theme_override_styles/fill = SubResource("StyleBoxFlat_lnv47")

[node name="SlotProgressPercentage4" type="ProgressBar" parent="."]
z_index = 1
offset_left = 124.0
offset_top = -15.0
offset_right = 839.0
offset_bottom = 150.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("2_0kaei")
theme_override_font_sizes/font_size = 156
theme_override_styles/background = SubResource("StyleBoxFlat_rgeg1")
theme_override_styles/fill = SubResource("StyleBoxFlat_lnv47")

[node name="SlotProgressPercentage5" type="ProgressBar" parent="."]
z_index = 1
offset_left = 311.0
offset_top = -15.0
offset_right = 1026.0
offset_bottom = 150.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("2_0kaei")
theme_override_font_sizes/font_size = 156
theme_override_styles/background = SubResource("StyleBoxFlat_rgeg1")
theme_override_styles/fill = SubResource("StyleBoxFlat_lnv47")

[node name="Slot1" type="Button" parent="."]
modulate = Color(0.529412, 0.529412, 0.529412, 1)
offset_left = -453.0
offset_top = -131.0
offset_right = 319.0
offset_bottom = 645.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("2_0kaei")
theme_override_colors/font_color = Color(1.4, 1.4, 1.4, 1)
theme_override_fonts/font = ExtResource("3_6rlta")
theme_override_font_sizes/font_size = 156
theme_override_styles/normal = SubResource("StyleBoxFlat_a804u")
action_mode = 0
keep_pressed_outside = true
text = " Slot 1 "
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Slot2" type="Button" parent="."]
modulate = Color(0.529412, 0.529412, 0.529412, 1)
offset_left = -264.0
offset_top = -131.0
offset_right = 511.0
offset_bottom = 642.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("2_0kaei")
theme_override_colors/font_color = Color(1.4, 1.4, 1.4, 1)
theme_override_fonts/font = ExtResource("3_6rlta")
theme_override_font_sizes/font_size = 156
theme_override_styles/normal = SubResource("StyleBoxFlat_a804u")
keep_pressed_outside = true
text = " Slot 2 "
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Slot3" type="Button" parent="."]
modulate = Color(0.529412, 0.529412, 0.529412, 1)
offset_left = -74.0
offset_top = -131.0
offset_right = 701.0
offset_bottom = 642.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("2_0kaei")
theme_override_colors/font_color = Color(1.4, 1.4, 1.4, 1)
theme_override_fonts/font = ExtResource("3_6rlta")
theme_override_font_sizes/font_size = 156
theme_override_styles/normal = SubResource("StyleBoxFlat_a804u")
keep_pressed_outside = true
text = " Slot 3 "
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Slot4" type="Button" parent="."]
modulate = Color(0.529412, 0.529412, 0.529412, 1)
offset_left = 118.0
offset_top = -131.0
offset_right = 890.0
offset_bottom = 645.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("2_0kaei")
theme_override_colors/font_color = Color(1.4, 1.4, 1.4, 1)
theme_override_fonts/font = ExtResource("3_6rlta")
theme_override_font_sizes/font_size = 156
theme_override_styles/normal = SubResource("StyleBoxFlat_a804u")
keep_pressed_outside = true
text = " Slot 4 "
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Slot5" type="Button" parent="."]
modulate = Color(0.529412, 0.529412, 0.529412, 1)
offset_left = 306.0
offset_top = -131.0
offset_right = 1064.0
offset_bottom = 642.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("2_0kaei")
theme_override_colors/font_color = Color(1.4, 1.4, 1.4, 1)
theme_override_fonts/font = ExtResource("3_6rlta")
theme_override_font_sizes/font_size = 156
theme_override_styles/normal = SubResource("StyleBoxFlat_a804u")
keep_pressed_outside = true
text = " Slot 5 "
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = -135.0
offset_top = -182.0
offset_right = 1215.0
offset_bottom = -45.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("2_0kaei")
theme_override_font_sizes/font_size = 124
theme_override_styles/normal = SubResource("StyleBoxFlat_p3bx2")
text = "Please select a game slot"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="SelectSlotStart" type="Button" parent="."]
offset_left = -85.0
offset_top = 54.0
offset_right = 86.0
offset_bottom = 106.0
tooltip_text = "Start the game."
theme = ExtResource("2_0kaei")
theme_override_fonts/font = ExtResource("3_21k4g")
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxFlat_eb7rl")
text = "Continue"

[node name="SelectSlotCancel" type="Button" parent="."]
offset_left = -285.0
offset_top = 54.0
offset_right = -114.0
offset_bottom = 106.0
tooltip_text = "Return to main menu."
theme = ExtResource("2_0kaei")
theme_override_fonts/font = ExtResource("3_21k4g")
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxFlat_xu515")
text = "Cancel"

[node name="ClearSlot" type="Button" parent="."]
offset_left = 120.0
offset_top = 54.0
offset_right = 291.0
offset_bottom = 106.0
tooltip_text = "Delete the entire slot."
theme = ExtResource("2_0kaei")
theme_override_fonts/font = ExtResource("3_21k4g")
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxFlat_xu515")
text = "Clear Slot"

[node name="SelectDifficultyButton" type="Button" parent="."]
offset_left = 218.0
offset_top = -203.0
offset_right = 471.0
offset_bottom = -151.0
tooltip_text = "Delete the entire slot."
theme = ExtResource("2_0kaei")
theme_override_fonts/font = ExtResource("3_21k4g")
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxFlat_xu515")
text = "Difficulty: Normal"

[node name="SelectLevelButton" type="Button" parent="."]
offset_left = -473.0
offset_top = -203.0
offset_right = -220.0
offset_bottom = -151.0
tooltip_text = "Delete the entire slot."
theme = ExtResource("2_0kaei")
theme_override_fonts/font = ExtResource("3_21k4g")
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxFlat_xu515")
text = "Level: 1"

[node name="Panel" type="Panel" parent="."]
modulate = Color(0.392157, 0.392157, 0.392157, 0.188235)
offset_left = -485.0
offset_top = -215.0
offset_right = 485.0
offset_bottom = 145.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dbquh")
metadata/_edit_use_anchors_ = true

[node name="Slot1HighlightPos" type="Node2D" parent="."]
position = Vector2(-464, -142)

[node name="Slot2HighlightPos" type="Node2D" parent="."]
position = Vector2(-275, -142)

[node name="Slot3HighlightPos" type="Node2D" parent="."]
position = Vector2(-84, -142)

[node name="Slot4HighlightPos" type="Node2D" parent="."]
position = Vector2(107, -142)

[node name="Slot5HighlightPos" type="Node2D" parent="."]
position = Vector2(294, -142)

[connection signal="button_up" from="Slot1" to="." method="_on_slot_1_button_up"]
[connection signal="button_up" from="Slot2" to="." method="_on_slot_2_button_up"]
[connection signal="button_up" from="Slot3" to="." method="_on_slot_3_button_up"]
[connection signal="button_up" from="Slot4" to="." method="_on_slot_4_button_up"]
[connection signal="button_up" from="Slot5" to="." method="_on_slot_5_button_up"]
[connection signal="button_up" from="SelectSlotStart" to="." method="_on_start_button_up"]
[connection signal="button_up" from="SelectSlotCancel" to="." method="_on_select_slot_cancel_button_up"]
[connection signal="button_up" from="ClearSlot" to="." method="_on_clear_slot_button_up"]
[connection signal="button_up" from="SelectDifficultyButton" to="." method="_on_select_difficulty_button_button_up"]
[connection signal="button_up" from="SelectLevelButton" to="." method="_on_select_level_button_button_up"]
